refactor: Junit 4 -> 5