@@ -298,13 +298,15 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
+                        <!-- 这里参数可能影响使用者，暂时约定需要带 Test 后缀 -->
                         <includes>
                             <include>**/*Test.java</include>
                             <include>**/*Test.groovy</include>
                             <include>**/*Spec.*</include>
                         </includes>
                         <forkMode>always</forkMode>
-                        <argLine>-Xms256m -Xmx256m -XX:PermSize=64m -XX:MaxPermSize=64m -Dfile.encoding=utf-8</argLine>
+                        <!-- 这里的max参数可能导致使用者 OOM，暂不添加最大值 -->
+                        <argLine>-Xms256m -XX:MetaspaceSize=128m -Dfile.encoding=utf-8</argLine>
                         <argLine>--add-modules java.xml.bind</argLine>
                         <argLine>--add-modules java.activation</argLine>
                         <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --illegal-access=warn</argLine>
